src/objects/Astrum_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Warranty_Years_Parts_Labor_Num__c</fullName>
        <description>Warranty years for Parts and Labor on Installation (number format).</description>
        <inlineHelpText>Warranty years for Parts and Labor on Installation (number format).</inlineHelpText>
        <label>Warranty Years Parts &amp; Labor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Years_Parts_Labor_Text__c</fullName>
        <description>Warranty years for Parts &amp; Labor on Installation.</description>
        <inlineHelpText>Warranty years for Parts &amp; Labor on Installation.</inlineHelpText>
        <label>Warranty Years Parts &amp; Labor Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10_OneRoof_PPA_Buyout_Cost__c</fullName>
        <label>Year 10 OneRoof PPA Buyout Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11_OneRoof_PPA_Buyout_Cost__c</fullName>
        <label>Year 11 OneRoof PPA Buyout Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_12_OneRoof_PPA_Buyout_Cost__c</fullName>
        <label>Year 12 OneRoof PPA Buyout Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_One_Production_Estimate__c</fullName>
        <label>Year One Production Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Astrum Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Closed__c</columns>
        <columns>Current__c</columns>
        <columns>Financing_Type__c</columns>
        <columns>Locked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC-{MM}-{DD}-{YY}-{0000}</displayFormat>
        <label>Astrum Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Astrum Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
</CustomObject>